# optiq

./: .gitattributes  .gitignore
optiq-master/src/avrC/lib/: sensors.c  sensors.h
optiq-master/src/avrC/src/: main.c
optiq-master/src/cpp/: CMakeLists.txt
optiq-master/src/cpp/lib/: gcodeParser.cpp  gcodeParser.hpp  globals.h  move.cpp  move.hpp
optiq-master/src/cpp/res/: design.gcode  speed.txt  step.txt  time.txt
optiq-master/src/cpp/src/: main.cpp
optiq-master/src/p5js/: optiq.html
optiq-master/src/p5js/p5/: sketch.js  style.css
optiq-master/src/processing/simulation/: simulation.pde  step.txt.lnk
optiq-master/src/scripts/: removeNewLine.sh  simulate.sh
src/avrC/lib/: SPI.c  SPI.h
src/cpp/: CMakeLists.txt
src/cpp/lib/: gcodeParser.cpp  gcodeParser.hpp  globals.h  move.cpp  move.hpp  run.cpp  run.hpp
src/cpp/res/: design.gcode  gcode.csv  step.txt  test.txt
src/cpp/src/: main.cpp
src/processing/simulation/: gcode.csv  oldSimulation.pde  simulation.pde  step.txt
src/scripts/: oldStepToCSV.sh  process.sh  removeNewLine.sh  simulate.sh  stepToCSV.sh
